# hasopencv

./: HasOpenCV.cabal  cabal.sandbox.config  hasopencv.cabal
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/Boolean-0.2.4-7gZhKW47DvV7rbiNaCoHt2/Data/: Boolean.dyn_hi  Boolean.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/MemoTrie-0.6.7-2Il2VRq0fYD5p4SUYGo34X/Data/: MemoTrie.dyn_hi  MemoTrie.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/NumInstances-1.4-ADq4WEhaRGn1wR6goT9cUh/Data/: NumInstances.dyn_hi  NumInstances.hi
.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: Boolean-0.2.4-8da25e9a14cdc5de165330adfc644832.conf  MemoTrie-0.6.7-3a2cce756b09c7347e37d61cd6f27a49.conf  NumInstances-1.4-cf7a1098b94c923b03ea96083979fd82.conf  allocated-processor-0.0.2-d7b9ece856d7865ca11c4c441a324972.conf  newtype-generics-0.5-e79e8069775ab150e6c1e0d7cd54da4d.conf  package.cache  vector-space-0.10.4-a83c0c4bf800d504cd01073a63c8c3a4.conf
src/: Makefile  install.sh  main.hi  main.hs  prog
src/HOpenCV/: OpenCV.hi  OpenCV.hs
src/HOpenCV/CV/: CV.hi  CV.hs  CxCore.hi  CxCore.hs  CxCore.hsc  HOpenCV_wrap  HOpenCV_wrap.h  HighGui.hi  HighGui.hs  HighGui.hsc  ImgProc.hs  Util.hi  Util.hs  Video.hi  Video.hs
src/examples/: Compilar.txt  Compilar2.txt  Test_1.hs  VideoWriter.hi  VideoWriter.hs  cannayVideo.hi  cannayVideo.hs  highgui.hi  highgui.hs  prog  video  videowriter_c.cpp
src/examples/HOpenCV/: OpenCV.hi
src/examples/HOpenCV/CV/: CV.hi  CV.hsc  CxCore.hi  CxCore.hs  CxCore.hsc  Error.hi  Error.hs  HOpenCV_wrap.cpp  HighGui.hi  HighGui.hs  HighGui.hsc  Util.hi  Util.hs  Video.hi  Video.hs
(+34 files in other folders)
