name:          HasOpenCV
version:       1.0.0
homepage:      https://github.com/juanmab37/hasopencv
license:       GPL
license-file:  LICENSE
author:        Juan Manuel Baruffaldi <juanmab37@gmail.com>
maintainer:    Juan Manuel Baruffaldi <juanmab37@gmail.com>
build-type:    Custom
cabal-version: >=1.10
category:      AI, Graphics
synopsis:      Haskell binding to OpenCV-3.x
description:   This is a Haskell library providing a binding to OpenCV-3.x.
               It binds directly with the C++ API using the @inline-c@ Haskell library.
               The library is far from complete but the framework is there to easily
               bind missing functionality.

extra-source-files:
    src/data/*.png
    src/data/*.jpg

extra-doc-files:



library
    hs-source-dirs: src
    c-sources:
        src/HOpenCV/CV/HOpenCV_wrap.cpp

    cc-options: -Wall -std=c++11
    ghc-options: -Wall -fwarn-incomplete-patterns -funbox-strict-fields -O3 `pkg-config opencv --cflags --libs`

    -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
    build-tools:         hsc2hs 

    -- Modules included in this library but not exported.
    -- other-modules:       
  
    -- LANGUAGE extensions used by modules in this package.
    other-extensions:    ForeignFunctionInterface, EmptyDataDecls, TypeFamilies

    build-depends:
        base >=4.8 && <4.9
        , allocated-processor >=0.0 && <0.1
        , vector-space >=0.10 && <0.11
        , mtl >=2.2 && <2.3

    default-language:   Haskell2010
    pkgconfig-depends:  opencv
    extra-libraries:    stdc++

